# templom-terkep

./: README.md  index.html  pyproject.toml  qgis.py  requirements.txt  templom-terkep.py
map-easyPrint/: bundle.js  bundle.js.map
