[tool.poetry]
name = "templom-terkep"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"

adjustText = "1.3.0"
contextily = "1.6.2"
matplotlib = "3.10.1"
pick = "2.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
